# license-retriever

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
.config/: hk.pkl  mise.lint.toml  mise.toml
.github/: dependabot.yml  renovate.json
.github/actions/mise/: action.yml
.github/workflows/: cargo-msrv.yaml  cargo-upgrade.yaml  codeql.yml  format-lint.yml  publish.yml  test.yml
src/: config.rs  error.rs  lib.rs
tests/: test.rs
